Fix some spacing

--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,7 @@ section img.header {
 
 .btn-banner {
   border-color: #fff;
-  background-color: #39F7ae;
+  background-color: #39f7ae;
   border-radius: 50px;
 }
 
@@ -69,12 +69,11 @@ article img {
   display: inline-block;
   width: 50px;
   height: 50px;
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(255, 255, 255, .6);
   padding: 12px;
   border-radius: 50%;
   margin: 0 auto 10px;
   box-sizing: border-box;
-  font-size: 1.5rem;
   color: #a000ff;
   transition: transform 1s;
   background-position: 50%;
@@ -101,7 +100,7 @@ h4 {
 .social:hover {
   cursor: pointer;
   background-color: #fff;
-  transition: 0.4s;
+  transition: .4s;
 }
 
 .social.facebook {
@@ -135,7 +134,7 @@ h4 {
 }
 
 .image {
-   object-fit: cover;
+  object-fit: cover;
 }
 
 #social-wrapper {
@@ -180,6 +179,7 @@ footer {
 footer ul {
   margin-top: 25px;
 }
+
 footer li {
   padding: 5px;
 }
@@ -204,15 +204,15 @@ hr {
 
 .button {
   border-color: #fff;
-  background-color: #39F7ae;
+  background-color: #39f7ae;
   border-radius: 50px;
   min-width: 150px;
 }
 
 input {
   border-radius: 50px;
-  background-color: rgba(255, 255, 255, 0.6);
-  border: 0;
+  background-color: rgba(255, 255, 255, .6);
+  border: none;
   text-align: center;
   height: 50px;
 }
@@ -239,11 +239,11 @@ input:focus {
 
 @media only screen and (min-width: 38em) {
 
-
   .img-flex {
     display: inline-block;
     vertical-align: middle;
   }
+
   .content {
     display: inline-block;
     vertical-align: middle;
@@ -251,7 +251,6 @@ input:focus {
 
   .divide {
     display: flex;
-
   }
 
   .divide.reverse {
